# sort-cpp

./: .gitignore  CMakeLists.txt  DetectionsTracker.cpp  DetectionsTracker.h  SortTracker.cpp  SortTracker.h  detections_tracker_example.cpp  sort_tracker.cpp  sort_tracker_example.cpp
detector/: CMakeLists.txt  ObjectDetector.cpp  ObjectDetector.h  detector_example.cpp
sort/: CMakeLists.txt  KalmanTracker.cpp  KalmanTracker.h  sort_example.cpp
sort-c++/: CMakeLists.txt  Hungarian.cpp
